--- a/public/style.css
+++ b/public/style.css
@@ -1,124 +1,111 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
+    body{
+      max-width: 1200px;
+      margin: 20px auto;
+      padding: 0 20px;
+      font-family: 'Noto Serif', serif;
+      max-width: 1200px;
+    }
+    p, h1, h2, h3, a, ul{
+      margin: 0;
+      padding: 0;
+      text-decoration: none;
+      color: #222;
+    }
 
-body {
-  height: 100vh;
-  box-sizing: border-box;
-  overflow: hidden;
-  background-color: #444;
-  font-family: monospace;
-  flex-direction: column;
-  padding: 60px 80px;
-}
+    /* nav & footer styles */
+    nav{
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 60px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid #ddd;
+      text-transform: uppercase;
+    }
+    nav ul{
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+    }
+    nav li{
+      list-style-type: none;
+      margin-left: 20px;
+    }
+    nav h1{
+      font-size: 3em;
+    }
+    nav p, nav a{
+      color: #777;
+      font-weight: 300;
+    }
+    footer{
+      color: #777;
+      text-align: center;
+      margin: 80px auto 20px;
+    }
+    h2{
+      margin-bottom: 40px;
+    }
+    h3{
+      text-transform: capitalize;
+      margin-bottom: 8px;
+    }
+    .content{
+      margin-left: 20px;
+    }
 
-h1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  font-family: cursive;
-  font-weight: 600;
-  color: #ccc;
-  text-align: center;
-}
+    /* index styles */
+    .blogs a{
+      display: block;
+      margin: 40px 0;
+      padding-left: 30px;
+      border-left: 6px solid crimson;
+    }
+    .blogs a:hover h3{
+      color: crimson;
+    }
 
-h3 {
-  font-size: 1.2rem;
-  font-family: cursive;
-  font-weight: 600;
-  color: orangered;
-  padding: 10px 0;
-  margin-top: 30px;
-}
-p {
-  font-size: 1rem;
-  font-family: cursive;
-  font-weight: 400;
-  color: #ccc;
-  padding: 5px 0;
-  margin-bottom: 12px;
-}
+    /* details styles */
+    .details{
+      position: relative;
+    }
+    .delete{
+      position: absolute;
+      top: 0;
+      right: 0;
+      border-radius: 50%;
+      padding: 8px;
+    }
+    .delete:hover{
+      cursor: pointer;
+      box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+    }
 
-a {
-  text-decoration: none;
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: chocolate;
-}
-
-.create_post {
-  display: flex;
-  justify-content: center;
-  margin-top: 40px;
-}
-
-form {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2rem 2rem;
-  background-color: #555;
-  color: #ccc;
-  border-radius: 4px;
-  gap: 1rem;
-}
-
-form > div > input  {
-  width: 275px;
-  color: #fff;
-  padding: 0.6rem 4px;
-  background-color: transparent;
-  border: none;
-  outline: none;  
-  border-bottom: 2px solid #ccc;
-}
-form > div {
-  display: flex;
-  flex-direction: column;
-}
-form > div > label {
-  margin-bottom: 2px;
-  margin-left: 4px;
-  font-size: 0.9rem;
-  font-weight: 500;
-  color: #ccc;
-  pointer-events: none;
-  transition: all 0.4s;
-}
-label:focus,
-label:valid {
-  top: 0;
-}
-
-form > div > textarea {
-  width: 275px;
-  font-size: 0.9rem;
-  color: #fff;
-  padding: 0.6rem 4px;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  border-bottom: 2px solid #ccc;
-  resize: none;
-}
-form > div > label[for="body"] {
-  margin-top: 15px;
-}
-
-form > button {
-  padding: 0.7rem 2.4rem;
-  margin-top: 40px;
-  background: linear-gradient(110deg, rgb(164, 104, 199),rgb(129, 25, 233));
-  border: 0;
-  border-radius: 6px;
-  color: #ccc;
-  cursor: pointer;
-  scale: 1;
-  transition: all 0.4s;
-}
-form > button:active {
-  scale: 0.8;
-}
+    /* create styles */
+    .create-blog form{
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    .create-blog input,
+    .create-blog textarea{
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 8px;
+    }
+    .create-blog label{
+      display: block;
+      margin-top: 24px;
+    }
+    textarea{
+      height: 120px;
+    }
+    .create-blog button{
+      margin-top: 20px;
+      background: crimson;
+      color: white;
+      padding: 6px;
+      border: 0;
+      font-size: 1.2em;
+      cursor: pointer;
+    }
