--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-    <title>Blog <%= title %> Page</title>
-  </head>
+  <%- include("./head.ejs") %>
+
   <body>
-    <h1>
-      Now im Practice on Node JS 🔮<br />
-      for backend and this is my first app express library ♟
-    </h1>
-    <h3>
-      <a href="/">Go to Home</a>
-    </h3>
+    <%- include("./nav.ejs") %>
+
+    <div class="about content">
+      <h1>
+        Now im Practice on Node JS 🔮<br />
+        for backend and this is my first app express library ♟
+      </h1>
+      <br/><br/>
+      <h4>
+        <a href="/">Go to Home</a>
+      </h4>
+    </div>
+
+    <%- include("./footer.ejs") %>
   </body>
 </html>
