--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("./head.ejs") %>
+  <%- include("./partials/head.ejs") %>
 
   <body>
-    <%- include("./nav.ejs") %>
+    <%- include("./partials/nav.ejs") %>
 
     <div class="about content">
       <h1>
@@ -16,6 +16,6 @@
       </h4>
     </div>
 
-    <%- include("./footer.ejs") %>
+    <%- include("./partials/footer.ejs") %>
   </body>
 </html>
