--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
 <body>
-  <%- include("./nav.ejs") %>
+  <%- include("../partials/nav.ejs") %>
 
   <div class="create-blog content">
     <form action="/blogs" method="POST">
@@ -17,6 +17,6 @@
     </form>
   </div>
 
-  <%- include("./footer.ejs") %>
+  <%- include("../partials/footer.ejs") %>
 </body>
 </html>
