--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
 <body>
-  <%- include("./nav.ejs") %>
+  <%- include("../partials/nav.ejs") %>
 
   <div class="details content">
     <h2><%= blog.title %></h2>
@@ -13,7 +13,7 @@
     <a class="delete" data-doc="<%= blog._id %>">delete</a>
   </div>
 
-  <%- include("./footer.ejs") %>
+  <%- include("../partials/footer.ejs") %>
 
   <script>
     const trashcan = document.querySelector('a.delete');
