--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
 <body>
-  <%- include("./nav.ejs") %>
+  <%- include("../partials/nav.ejs") %>
 
   <div class="blogs content">
     <h2>All Blogs</h2>
@@ -21,6 +21,6 @@
 
   </div>
 
-  <%- include("./footer.ejs") %>
+  <%- include("../partials/footer.ejs") %>
 </body>
 </html> 
