--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
   <div class="site-title">
     <a href="/"><h1>Blog Omed</h1></a>
-    <p>A Net Omed Site</p>
+    <p>Omed Site</p>
   </div>
   <ul>
     <li><a href="/">Blogs</a></li>
