--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,8 +4,10 @@
     <p>Omed Site</p>
   </div>
   <ul>
-    <li><a href="/">Blogs</a></li>
     <li><a href="/about">About</a></li>
+    <li><a href="/">Blogs</a></li>
     <li><a href="/blogs/create">New Blog</a></li>
+    <li><a href="/user">users</a></li>
+    <li><a style="color: crimson;" href="/user/create">SignUP</a></li>
   </ul>
 </nav>
