add delete user

--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -11,9 +11,9 @@
     <% if (Users.length > 0) { %>
       <% Users.forEach(user => { %>
         <a class="single" href="/user/<%= user._id %>">
-          <h3 class="title"><%= user.username %></h3>
+          <h3 class="title"><%= user.email %></h3>
         </a>
-        <p class="snippet"><%= user.password %></p>
+        <p class="snippet"><%= user.username %></p>
       <% }) %>
     <% } else { %>
       <p>There are no User to display...</p>
