--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -20,7 +20,8 @@
   <script>
     const trashcan = document.querySelector('a.delete');
     trashcan.addEventListener('click', (e) => {
-      const endpoint = `/blogs/${trashcan.dataset.doc}`;
+      const id = trashcan.dataset.doc
+      const endpoint = `/blogs/${id}`;
       fetch(endpoint, {
         method: 'DELETE',
       })
