--- a/views/users/profileUser.ejs
+++ b/views/users/profileUser.ejs
@@ -17,17 +17,18 @@
 
     <%- include("../partials/footer.ejs") %>
 
-    <!-- <script>
-      const trashcan = document.querySelector("a.delete");
+    <script>
+      const trashcan = document.querySelector('a.delete');
       trashcan.addEventListener("click", (e) => {
-        const endpoint = `/blogs/${trashcan.dataset.doc}`;
+        const id = trashcan.dataset.doc;
+        const endpoint = `/user/${id}`;
         fetch(endpoint, {
-          method: "DELETE",
+          method: "DELETE"
         })
-          .then((response) => response.json())
-          .then((data) => (window.location.href = data.redirect))
-          .catch((err) => console.log(err));
+          .then(response => response.json())
+          .then(data => window.location.href = data.redirect)
+          .catch(err => console.log(err));
       });
-    </script> -->
+    </script>
   </body>
 </html>
