--- a/backend/views/users/signin.ejs
+++ b/backend/views/users/signin.ejs
@@ -6,12 +6,12 @@
   <body>
     <%- include("../partials/nav.ejs") %>
 
-    <!-- <div class="register">
+    <div class="register">
       <div>
         <h2>Login user</h2>
         <a href="/auth/create">Go To Register</a>
       </div>
-      <form class="form_create_user" action="/auth" method="POST">
+      <form class="form_create_user" method="POST">
         <label for="email">email</label>
         <input type="text" name="email" id="email" placeholder="email" />
         <label for="password">Password</label>
@@ -23,9 +23,6 @@
         />
         <button type="submit" class="btn_create_user">Login</button>
       </form>
-    </div> -->
-    <div>
-      hello world
     </div>
 
     <%- include("../partials/footer.ejs") %>
