--- a/backend/views/404.ejs
+++ b/backend/views/404.ejs
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./partials/head.ejs") %>
+  <%- include("./partials/head.ejs") %>
 
-<body>
-  <%- include("./partials/nav.ejs") %>
+  <body>
+    <%- include("./partials/nav.ejs") %>
 
+    <div class="not-found content">OOPS,page not found :)</div>
 
-  <div class="not-found content">
-    OOPS,page not found :)
-  </div>
-
-
-  <%- include("./partials/footer.ejs") %>
-</body>
-</html> 
+    <%- include("./partials/footer.ejs") %>
+  </body>
+</html>
