--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,10 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   max-width: 1200px;
   margin: 20px auto;
   padding: 0 20px;
-  font-family: "Noto Serif", serif;
+  font-family: Georgia, 'Times New Roman', Times, serif, serif;
   max-width: 1200px;
 }
 p,
