--- a/client/src/main.css
+++ b/client/src/main.css
@@ -6,7 +6,7 @@ body {
   max-width: 1200px;
   margin: 20px auto;
   padding: 0 20px;
-  font-family: Georgia, 'Times New Roman', Times, serif, serif;
+  font-family: Georgia, "Times New Roman", Times, serif, serif;
   max-width: 1200px;
 }
 p,
@@ -64,28 +64,31 @@ h3 {
 }
 
 /* index styles */
-.blogs a {
+.blogs a,
+.title {
   display: block;
-  margin: 40px 0;
-  padding-left: 30px;
+  margin: 25px 0;
+  padding-left: 15px;
   border-left: 6px solid crimson;
+  color: white;
 }
 .blogs a:hover h3 {
   color: crimson;
 }
-
 /* details styles */
 .details {
   position: relative;
 }
 .delete {
+  background: crimson;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 40px;
+  right: 20px;
   border-radius: 50%;
   padding: 8px;
 }
 .delete:hover {
+  background: rgb(172, 7, 40);
   cursor: pointer;
   box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
 }
@@ -101,6 +104,8 @@ h3 {
   width: 100%;
   margin: 10px 0;
   padding: 8px;
+  border: 2px solid crimson;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .create-blog label {
   display: block;
@@ -110,10 +115,11 @@ textarea {
   height: 120px;
 }
 .create-blog button {
+  width: 100%;
   margin-top: 20px;
   background: crimson;
   color: white;
-  padding: 6px;
+  padding: 6px 8px;
   border: 0;
   font-size: 1.2em;
   cursor: pointer;
